--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ button {
 
 input {
   min-width: 0;
+  font-size: 18px;
+}
+
+input::placeholder {
+  color: #191e3b;
 }
 
 .wrapper {
@@ -75,9 +80,13 @@ ul {
 
 #section-01 {
   min-height: 400px;
-  height: 85vh;
+  height: 88vh;
   max-height: 600px;
-  background-image: url("/assets/bg-image.avif");
+  background-image: linear-gradient(
+      rgba(19, 18, 18, 0.295),
+      rgba(39, 39, 39, 0.269)
+    ),
+    url("/assets/bg-image.avif");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -98,9 +107,9 @@ h1 {
 .outer-container {
   background-color: #f7f7f8;
   border-radius: 16px;
-  padding: 10px 16px;
+  padding: 16px 16px;
   display: flex;
-  gap: 16px;
+  gap: 14px;
 }
 
 .input-container {
@@ -108,9 +117,9 @@ h1 {
   border-radius: 8px;
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 10px;
   flex: 1;
-  padding: 8px 10px;
+  padding: 10px 12px;
 }
 
 .input-container img {
@@ -118,10 +127,10 @@ h1 {
   height: auto;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="date"] {
   border: none;
   outline: none;
-
   width: 100%;
   height: 100%;
 }
@@ -131,7 +140,36 @@ input[type="text"] {
   background-color: #191e3b;
   color: white;
   border: none;
-  border-radius: 16px;
+  border-radius: 2500rem;
   padding: 4px 16px;
   font-weight: 600;
+}
+
+.register {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #191e3b;
+  padding: 16px;
+  border-radius: 14px;
+  color: white;
+}
+
+.register-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.register-icon {
+  background-color: #aed1f3;
+  padding: 10px 10px;
+  border-radius: 50%;
+}
+
+.register-icon img {
+  width: 20px;
+  height: auto;
+  display: block;
+  margin-block: auto;
 }
