--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ input[type="date"] {
   outline: none;
   width: 100%;
   height: 100%;
+  background-color: transparent;
 }
 
 .outer-container button {
@@ -143,6 +144,16 @@ input[type="date"] {
   border-radius: 2500rem;
   padding: 4px 16px;
   font-weight: 600;
+}
+
+#section-02 {
+}
+
+#section-02 .wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  width: 100%;
 }
 
 .register {
@@ -172,4 +183,43 @@ input[type="date"] {
   height: auto;
   display: block;
   margin-block: auto;
+}
+
+.accommodations-container h3 {
+  margin-bottom: 14px;
+}
+
+.accommodations {
+  display: flex;
+  gap: 14px;
+  overflow-x: scroll;
+  scrollbar-width: none;
+}
+
+h3 {
+  font-size: 28px;
+  font-weight: 500;
+  /* margin-bottom: 14px; */
+}
+
+.accommodation {
+  position: relative;
+  min-width: 20%;
+  min-height: 270px;
+  border-radius: 12px;
+  background-image: linear-gradient(
+      rgba(19, 18, 18, 0),
+      rgba(39, 39, 39, 0.676)
+    ),
+    url("/assets/garden.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.accommodation p {
+  position: absolute;
+  bottom: 2%;
+  left: 3%;
+  color: white;
+  font-weight: 500;
 }
