--- a/style.css
+++ b/style.css
@@ -146,9 +146,6 @@ input[type="date"] {
   font-weight: 600;
 }
 
-#section-02 {
-}
-
 #section-02 .wrapper {
   display: flex;
   flex-direction: column;
@@ -232,8 +229,8 @@ h3 {
 
 .trip img {
   min-width: 20%;
-  max-width: 300px;
-  min-height: 270px;
+  max-width: 270px;
+  min-height: 210px;
   border-radius: 12px;
 }
 
@@ -259,4 +256,55 @@ h3 {
   color: white;
   font-weight: 500;
   border-radius: 5px;
+}
+
+.pictures {
+  display: flex;
+  gap: 16px;
+  margin-top: 32px;
+}
+
+.picture {
+  width: 100%;
+}
+
+.picture img {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+  border-radius: 16px;
+}
+
+.picture p {
+  font-weight: 500;
+}
+
+.picture p:nth-of-type(1) {
+  font-size: 12px;
+}
+
+#section-03 h3 {
+  margin-bottom: 14px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  column-gap: 14px;
+  row-gap: 20px;
+}
+
+.box-1 {
+  grid-column: 1/2;
+  grid-row: 1;
+}
+
+.box-2 {
+  grid-column: 2 /4;
+  grid-row: 1;
+}
+
+.other {
+  grid-row: 2;
 }
